# ros_task_manager

./: LICENSE.txt  README.md  ignore_turtlesim.sh
src/task_manager_client_py/: package.xml  setup.cfg  setup.py
src/task_manager_client_py/node/: console  console.py  tasklist.py
src/task_manager_client_py/src/task_manager_lib/: TaskSmach.py  parameter_generator.py
src/task_manager_client_py/task_manager_client_py/: TaskClient.py  console.py  tasklist.py  testclient.py
src/task_manager_client_py/test/: testclient.py  teststart.py
src/task_manager_lib/: CMakeLists.txt  package.xml  setup.py  tags
src/task_manager_lib/cfg/: MinimalTask.cfg  TaskSystem.cfg  TaskWait.cfg
src/task_manager_lib/include/task_manager_lib/: DynamicTask.h  ParameterList.h  ServiceStorage.h  TaskActionGeneric.h  TaskClient.h  TaskConfig.h  TaskDefinition.h  TaskEnvironment.h  TaskIdleDefault.h  TaskInstance.h  TaskParameterDefinition.h  TaskScheduler.h  TaskServerDefault.h  TaskServiceGeneric.h  TaskSystem.h  TaskWaitDefault.h
src/task_manager_lib/node/: console  console.py  tasklist.py
src/task_manager_lib/src/: DynamicTask.cpp  ServiceStorage.cpp  TaskConfig.cpp  TaskDefinition.cpp  TaskHistory.cpp  TaskIdleDefault.cpp  TaskInstance.cpp  TaskScheduler.cpp  TaskServerDefault.cpp  TaskServerInterface.cpp  TaskSystem.cpp  TaskWaitDefault.cpp
src/task_manager_lib/src/task_manager_lib/: TaskClient.py  TaskSmach.py  parameter_generator.py
src/task_manager_lib/srv/: ExeTaskSequence.srv  SaveBasicMission.srv  StartTask.srv  StopComplexMission.srv
src/task_manager_move_base/: CMakeLists.txt  package.xml
src/task_manager_move_base/include/task_manager_move_base/: TaskActionMoveBase.h
src/task_manager_msgs/: CMakeLists.txt  package.xml  setup.py
src/task_manager_msgs/include/task_manager_msgs/: encapsulate_message.h
src/task_manager_msgs/msg/: EncapsulatedMessage.msg  SyncStatus.msg  TaskConfig.msg  TaskDescription.msg  TaskHistory.msg  TaskParameter.msg  TaskStatus.msg
src/task_manager_msgs/src/: test_encapsulate.cpp
src/task_manager_msgs/src/task_manager_msgs/: encapsulate_message.py
src/task_manager_msgs/srv/: GetAllTaskStatus.srv  StartTask.srv  StopTask.srv
src/task_manager_nav2/: CMakeLists.txt  package.xml
src/task_manager_nav2/include/task_manager_nav2/: TaskActionNav2.h
src/task_manager_sync/: CMakeLists.txt  package.xml
src/task_manager_sync/cfg/: TaskSetStatusSync.cfg  TaskWaitForStatusSync.cfg
src/task_manager_sync/include/task_manager_sync/: TaskEnvironmentSync.h  TaskServerSync.h  (+2 more)
src/task_manager_sync/launch/: launch_server.launch
src/task_manager_sync/missions/: mission1.py  mission2.py  mission3.py
src/task_manager_sync/msg/: SyncStatus.msg
src/task_manager_sync/src/: TaskEnvironmentSync.cpp  TaskServerSync.cpp  TaskSetStatusSync.cpp  TaskWaitForStatusSync.cpp  task_server.cpp
src/task_manager_sync/tasks/: TaskSetStatusSync.cpp  TaskSetStatusSync.h  TaskWaitForStatusSync.cpp
src/task_manager_sync/tests/: task_server.cpp
src/task_manager_test/: CMakeLists.txt  package.xml
src/task_manager_test/cfg/: TaskTest.cfg
src/task_manager_test/src/: TaskFail.cpp  TaskIdle.cpp  TaskLong.cpp  testClient.py  testClienta.cpp  testClientc.cpp  testClientd.cpp  testCliente.cpp  testTS1b.cpp  testTS2b.cpp  testTS2c.cpp  testTS2d.cpp  testTS2e.cpp  testTasks.cpp
src/task_manager_turtlesim/: CMakeLists.txt  package.xml  setup.py
src/task_manager_turtlesim/cfg/: TaskFail.cfg  TaskFollowPath.cfg  TaskGoTo.cfg  TaskReachAngle.cfg  TaskSetPen.cfg
src/task_manager_turtlesim/launch/: button_server.launch  button_server2.launch  launch_all.launch  launch_all_mi.launch  launch_server.launch  launch_server_mi.launch  launch_server_remap.launch  launch_square.launch
src/task_manager_turtlesim/missions/: dummy_service.py  mission.py  mission_buttons.py  mission_cond.py  mission_fail.py  mission_fast_cond.py  mission_path.py  mission_service.py  mission_square.py  mission_timeout.py
src/task_manager_turtlesim/src/: TurtleSimEnv.cpp  task_server.cpp
src/task_manager_turtlesim/tasks/: TaskClear.cpp  TaskClear.h  TaskClearGeneric.cpp  TaskClearGeneric.h  TaskClearGenericWC.cpp  TaskClearGenericWC.h  TaskFail.cpp  TaskFail.h  TaskFollowPath.cpp  TaskFollowPath.h  TaskGoTo.cpp  TaskGoTo.h  TaskMoveBase.cpp  TaskMoveBase.h  TaskMoveBaseWC.cpp  TaskMoveBaseWC.h  TaskMoveGoal.cpp  TaskMoveGoal.h  TaskNav2.cpp  TaskNav2.h  TaskReachAngle.cpp  TaskReachAngle.h  TaskSetPen.cpp  TaskSetPen.h  TaskSpawnGeneric.cpp  TaskSpawnGeneric.h  TaskWaitForButton.cpp  TaskWaitForButton.h  TaskWaitForROI.cpp  TaskWaitForROI.h
task_manager_test/: CMakeLists.txt  mainpage.dox  manifest.xml
task_manager_test/cfg/: TaskFail.cfg  TaskLong.cfg  TaskLong.cfgc  TaskTest.cfgc
task_manager_test/include/task_manager_test/: TaskIdle.h  TaskLong.h  TaskTest.h
task_manager_test/src/: TaskIdle.cpp  TaskIdle.h  TaskLong.cpp  TaskLong.h  TaskTest.cpp  TaskTest.h  testClient.py  testClienta.cpp  testClientb.cpp  testClientc.cpp  testClientd.cpp  testCliente.cpp  testServer.cpp  testTP.cpp  testTS1a.cpp  testTS1b.cpp  testTS1c.cpp  testTS2a.cpp  testTS2b.cpp  testTS2c.cpp  testTS2d.cpp  testTS2e.cpp  testTS2f.cpp  testTasks.cpp
task_manager_turtlesim/: CMakeLists.txt  manifest.xml
task_manager_turtlesim/cfg/: TaskFail.cfg  TaskGoTo.cfg  TaskGoTo.cfgc  TaskSetPen.cfg  TaskSetPen.cfgc  TaskWaitForButton.cfg  TaskWaitForROI.cfg
task_manager_turtlesim/include/task_manager_turtlesim/: TurtleSimEnv.h
task_manager_turtlesim/launch/: button_server.launch  launch_all.launch  launch_server.launch  launch_square.launch
task_manager_turtlesim/missions/: mission.py  mission_04-Dec-2012-15_23_22.mission  mission_buttons.py  mission_cond.py  mission_square.py  mission_timeout.py
task_manager_turtlesim/src/: TurtleSimEnv.cpp  task_server.cpp
task_manager_turtlesim/tasks/: TaskClear.cpp  TaskClear.h  TaskFail.cpp  TaskFail.h  TaskGoTo.cpp  TaskGoTo.h  TaskReachAngle.cpp  TaskReachAngle.h  TaskSetPen.cpp  TaskSetPen.h  TaskWaitForButton.cpp  TaskWaitForButton.h  TaskWaitForROI.cpp  TaskWaitForROI.h
(+147 files in other folders)
